force-app/main/default/objects/Account/fields/Account_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifier__c</fullName>
    <description>This field will be used to identify accounts coming from the origination system. The key pattern is Last Name + DOB or Last Name + Phone Number</description>
    <externalId>true</externalId>
    <label>Account Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>