force-app/main/default/objects/Account/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household/Company Name Formula</label>
    <type>Text</type>
</CustomField>