force-app/main/default/objects/Account/fields/AcctNo__c.field-meta.xml
<CustomField>
    <fullName>AcctNo__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AcctNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>