force-app/main/default/objects/Account/fields/HistoricalChecker__c.field-meta.xml
<CustomField>
    <fullName>HistoricalChecker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HistoricalChecker</label>
    <type>Checkbox</type>
</CustomField>