force-app/main/default/objects/Account/fields/Last_Closed_Loan__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_Loan__c</fullName>
    <description>Simply shows the last loan closed with this household, ignores which property it was tied to.  Useful for email blast purposes.</description>
    <label>Last Closed Loan</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>