force-app/main/default/objects/Account/fields/Last_Loan_Closed_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_Loan_Closed_Days__c</fullName>
    <formula>Today() - Last_Closed_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Loan Closed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>