force-app/main/default/objects/Account/fields/Loan_Originator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Originator__c</fullName>
    <label>Loan Originator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dusty Broderick</fullName>
            </value>
            <value>
                <fullName>Missy Broderick</fullName>
            </value>
            <value>
                <fullName>Brandon Kyle</fullName>
            </value>
            <value>
                <fullName>Cole Annati</fullName>
            </value>
            <value>
                <fullName>Joe Rivera</fullName>
            </value>
            <value>
                <fullName>Andy Hess</fullName>
            </value>
            <value>
                <fullName>Steve McKnight</fullName>
            </value>
            <value>
                <fullName>Tiffany Attwood</fullName>
            </value>
            <value>
                <fullName>Robert Salas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>