force-app/main/default/objects/Account/fields/originalOwnerTestField__c.field-meta.xml
<CustomField>
    <fullName>originalOwnerTestField__c</fullName>
    <label>originalOwnerTestField</label>
    <length>30</length>
    <type>Text</type>
</CustomField>