force-app/main/default/objects/Account/fields/Send_Gift__c.field-meta.xml
<CustomField>
    <fullName>Send_Gift__c</fullName>
    <label>Send Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Approved: Survival Kit</fullName>
            </value>
            <value>
                <fullName>In Contract: Cookies (Cravory)</fullName>
            </value>
            <value>
                <fullName>In Contract: Cookies (Milk Jar)</fullName>
            </value>
            <value>
                <fullName>In Contract: Sherri&apos;s Berries ($30)</fullName>
            </value>
            <value>
                <fullName>Closed: Rubber Stamp</fullName>
            </value>
            <value>
                <fullName>Closed: Succulent Garden ($36)</fullName>
            </value>
            <value>
                <fullName>Closed: Tiffany&apos;s Glasses ($50)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>