force-app/main/default/objects/Account/fields/Type_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Property__c</fullName>
    <label>Type of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>