force-app/main/default/objects/Account/listViews/All_Companies.listView-meta.xml
<ListView>
    <fullName>All_Companies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Account_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Company</value>
    </filters>
    <label>All Companies</label>
    <sharedTo>
        <group>Team_Broderick</group>
    </sharedTo>
</ListView>