force-app/main/default/objects/Account/listViews/All_Lenders.listView-meta.xml
<ListView>
    <fullName>All_Lenders</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Account_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Lender / Bank</value>
    </filters>
    <label>All Lenders</label>
</ListView>